<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.team1.issuetracker.ui.main.milestone.AddMilestoneViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/lo_appbar"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="새로운 마일스톤"
                app:menu="@menu/save_appbar_menu"
                app:navigationIcon="@drawable/ic_back"
                app:navigationIconTint="@color/white"
                app:elevation="0dp"
                app:theme="@style/AppTheme.ActionBar"
                android:background="@color/Primary1"
                app:titleTextColor="@color/white"/>

        </com.google.android.material.appbar.AppBarLayout>

        <View
            android:id="@+id/view_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintTop_toBottomOf="@id/lo_appbar"/>

        <TextView
            android:id="@+id/tv_title_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_title"
            app:layout_constraintWidth_percent="0.2"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/title_label"
            android:textColor="@color/Label2"/>

        <EditText
            android:id="@+id/et_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/view_title"
            app:layout_constraintStart_toEndOf="@id/tv_title_label"
            android:textSize="14sp"
            android:hint="@string/required_input"
            android:background="@android:color/transparent"
            android:onTextChanged="@{(text, start, before, count)  -> viewModel.setTitle(text, start, before, count)}"/>

        <View
            android:id="@+id/view_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintTop_toBottomOf="@id/et_title"/>

        <TextView
            android:id="@+id/tv_description_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_description"
            app:layout_constraintWidth_percent="0.2"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/description"
            android:textColor="@color/Label2"/>

        <EditText
            android:id="@+id/et_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/view_description"
            app:layout_constraintStart_toEndOf="@id/tv_description_label"
            android:textSize="14sp"
            android:hint="@string/choose"
            android:background="@android:color/transparent"
            android:afterTextChanged="@{text -> viewModel.setContent(text)}"/>

        <View
            android:id="@+id/view_date"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintTop_toBottomOf="@id/et_description"/>

        <TextView
            android:id="@+id/tv_date_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_date"
            app:layout_constraintWidth_percent="0.2"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/date_label"
            android:textColor="@color/Label2"/>

        <EditText
            android:id="@+id/et_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/view_date"
            app:layout_constraintStart_toEndOf="@id/tv_date_label"
            android:textSize="14sp"
            android:hint="@string/date_format"
            android:background="@android:color/transparent"
            setDate="@{viewModel}"/>

        <ImageView
            android:id="@+id/btn_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17dp"
            android:src="@drawable/ic_calendar"
            app:layout_constraintTop_toBottomOf="@id/view_date"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/view_last"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintTop_toBottomOf="@id/et_date"/>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Label3"
            app:layout_constraintTop_toBottomOf="@id/view_last"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>