<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.LoginActivity"
        android:background="@color/Backgrounds2">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.2"
            android:text="@string/title"
            android:fontFamily="@font/title_font"
            android:textSize="50sp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@id/gl_title" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_title"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_github_login"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/gl_title"
            android:backgroundTint="@color/black"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:icon="@drawable/github_logo"
            android:textColor="@color/white"
            android:text="@string/github_login_label"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_google_login"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

        <Button
            android:id="@+id/btn_google_login"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/gl_google_login"
            android:background="@drawable/login_button"
            android:backgroundTint="@color/black"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:drawableStart="@drawable/google_logo"
            android:textColor="@color/white"
            android:text="@string/google_login_label"/>
        


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>